--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="intro">
       <div class="salute">
         <div class="saluteTextContainer">
-          <h1 class="saluteText">Hi</h1>
+          <h1 class="saluteText">Hey</h1>
         </div>
         <div class="saluteImgContainer">
           <img src="./img/person.png" alt="" class="saluteImg" />
@@ -45,13 +45,12 @@
         <div class="projectDetail">
           <h1 class="projectTitle">Museum Of Candy</h1>
           <p class="projectDesc">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
-            repudiandae quia natus et iste earum ab fugiat eum ipsam, illum
-            vitae nihil quasi recusandae? Nesciunt laudantium recusandae illo
-            veritatis possimus! Accusamus repudiandae quia natus et iste earum
-            ab fugiat eum ipsam, illum vitae nihil quasi recusandae? Nesciunt
-            laudantium recusandae illo veritatis possimus! laudantium
-            recusandae illo veritatis possimus! recusandae illo veritatis.
+            A responsive website created using CSS.
+            A very basic website created as practice.
+            My first scrollable website.
+            The website is full of photos and paragraphs.
+            One can learn about various candies from this website.
+            I used some cool symbols and a navbar too.
           </p>
           <button class="projectButton">Learn More</button>
         </div>
@@ -66,13 +65,10 @@
         <div class="projectDetail">
           <h1 class="projectTitle">Pricing Panel</h1>
           <p class="projectDesc">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
-            repudiandae quia natus et iste earum ab fugiat eum ipsam, illum
-            vitae nihil quasi recusandae? Nesciunt laudantium recusandae illo
-            veritatis possimus! Accusamus repudiandae quia natus et iste earum
-            ab fugiat eum ipsam, illum vitae nihil quasi recusandae? Nesciunt
-            laudantium recusandae illo veritatis possimus! laudantium
-            recusandae illo veritatis possimus! recusandae illo veritatis.
+            A basic pricing panel table. This was created as an exercise.
+            My first responsive website, a basic table that consists of some pretty
+            cool photos and paragraphs.
+            Creating the buttons and stuff was pretty interesting.
           </p>
           <button class="projectButton">Learn More</button>
         </div>
@@ -85,15 +81,14 @@
           </div>
         </div>
         <div class="projectDetail">
-          <h1 class="projectTitle">Basic Form</h1>
+          <h1 class="projectTitle">Museum Of Candy</h1>
           <p class="projectDesc">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
-            repudiandae quia natus et iste earum ab fugiat eum ipsam, illum
-            vitae nihil quasi recusandae? Nesciunt laudantium recusandae illo
-            veritatis possimus! Accusamus repudiandae quia natus et iste earum
-            ab fugiat eum ipsam, illum vitae nihil quasi recusandae? Nesciunt
-            laudantium recusandae illo veritatis possimus! laudantium
-            recusandae illo veritatis possimus! recusandae illo veritatis.
+            A responsive website created using CSS.
+            A very basic website created as practice.
+            My first scrollable website.
+            The website is full of photos and paragraphs.
+            One can learn about various candies from this website.
+            I used some cool symbols and a navbar too.
           </p>
           <button class="projectButton">Learn More</button>
         </div>
@@ -102,31 +97,33 @@
     <!-- GITHUB -->
     <div class="githubContainer">
       <h1 class="githubTitle">Want to see all projects?</h1>
-      <div class="githubChart">
-        <div class="dates">
-          <span>Jan</span>
-          <span>Feb</span>
-          <span>Mar</span>
-          <span>Apr</span>
-          <span>May</span>
-          <span>Jun</span>
-          <span>Jul</span>
-          <span>Agu</span>
-          <span>Sep</span>
-          <span>Oct</span>
-          <span>Nov</span>
-          <span>Dec</span>
-        </div>
-        <div class="boxContainer"></div>
-        <h1 class="githubTitle">ON GITHUB</h1>
-      </div>
-      <div class="githubSm">
-        <a href="">
-          <img src="./img/github.png" alt="" />
-        </a>
-        <h2>Find Me on Github</h2>
-      </div>
+      <a href="https://github.com/UtkarshE">
+        <div class="githubChart">
+          <div class="dates">
+            <span>Jan</span>
+            <span>Feb</span>
+            <span>Mar</span>
+            <span>Apr</span>
+            <span>May</span>
+            <span>Jun</span>
+            <span>Jul</span>
+            <span>Agu</span>
+            <span>Sep</span>
+            <span>Oct</span>
+            <span>Nov</span>
+            <span>Dec</span>
+          </div>
+          <div class="boxContainer"></div>
+      </a>
+      <h1 class="githubTitle">ON GITHUB</h1>
     </div>
+    <div class="githubSm">
+      <a href="https://github.com/UtkarshE">
+        <img src="./img/GitHub-logo1.png" alt="" />
+      </a>
+      <h2>Find Me on Github</h2>
+    </div>
+  </div>
   </div>
   <script src="./app.js"></script>
 </body>
